build-files/plassembler/1.8.2/README.md
# plassembler container

Main tool: [plassembler](https://github.com/gbouras13/plassembler)
  
Code repository: https://github.com/gbouras13/plassembler

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda"

  Name                       Version       Build                 Channel    
──────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex              0.1           conda_forge           conda-forge
  _openmp_mutex              4.5           2_gnu                 conda-forge
  about-time                 4.2.1         pyhd8ed1ab_1          conda-forge
  alive-progress             3.2.0         pyhd8ed1ab_0          conda-forge
  alsa-lib                   1.2.14        hb9d3cd8_0            conda-forge
  archspec                   0.2.5         pyhd8ed1ab_0          conda-forge
  aria2                      1.37.0        hbc8128a_2            conda-forge
  attr                       2.5.2         h39aace5_0            conda-forge
  binutils_impl_linux-64     2.44          h9d8b0ac_4            conda-forge
  biopython                  1.86          py312h4c3975b_0       conda-forge
  blast                      2.17.0        h66d330f_0            bioconda   
  boost-cpp                  1.85.0        h3c6214e_4            conda-forge
  brotli-python              1.2.0         py312h67db365_0       conda-forge
  bzip2                      1.0.8         hda65f42_8            conda-forge
  c-ares                     1.34.5        hb9d3cd8_0            conda-forge
  ca-certificates            2025.10.5     hbd8a1cb_0            conda-forge
  cairo                      1.18.4        h3394656_0            conda-forge
  canu                       2.3           h3fb4750_2            bioconda   
  capnproto                  1.0.2         h766bdaa_3            conda-forge
  certifi                    2025.10.5     pyhd8ed1ab_0          conda-forge
  cffi                       2.0.0         py312h460c074_1       conda-forge
  charset-normalizer         3.4.4         pyhd8ed1ab_0          conda-forge
  chopper                    0.11.0        hcdda2d0_0            bioconda   
  clang                      21.1.0        default_h36abe19_1    conda-forge
  clang-21                   21.1.0        default_h99862b1_1    conda-forge
  click                      8.3.0         pyh707e725_0          conda-forge
  curl                       8.16.0        h4e3cde8_0            conda-forge
  cyrus-sasl                 2.1.28        hd9c7081_0            conda-forge
  dbus                       1.16.2        h3c4dab8_0            conda-forge
  dnaapler                   1.3.0         pyhdfd78af_0          bioconda   
  entrez-direct              24.0          he881be0_0            bioconda   
  fastp                      1.0.1         heae3180_0            bioconda   
  flye                       2.9.6         py312h5e9d817_0       bioconda   
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0            conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0            conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0            conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3            conda-forge
  fontconfig                 2.15.0        h7e30c49_1            conda-forge
  fonts-conda-ecosystem      1             0                     conda-forge
  fonts-conda-forge          1             0                     conda-forge
  freetype                   2.14.1        ha770c72_0            conda-forge
  fribidi                    1.0.16        hb03c661_0            conda-forge
  gawk                       5.3.1         hcd3d067_0            conda-forge
  gettext                    0.25.1        h3f43e3d_1            conda-forge
  gettext-tools              0.25.1        h3f43e3d_1            conda-forge
  giflib                     5.2.2         hd590300_0            conda-forge
  glib                       2.86.0        hbcf1ec1_1            conda-forge
  glib-tools                 2.86.0        hf516916_1            conda-forge
  gmp                        6.3.0         hac33072_2            conda-forge
  gnuplot                    5.4.10        hb1719d7_0            conda-forge
  grapheme                   0.6.0         pyhd8ed1ab_1          conda-forge
  graphite2                  1.3.14        hecca717_2            conda-forge
  gsl                        2.8           hbf7d49c_1            conda-forge
  gst-plugins-base           1.24.11       h651a532_0            conda-forge
  gstreamer                  1.24.11       hc37bda9_0            conda-forge
  h2                         4.3.0         pyhcf101f3_0          conda-forge
  harfbuzz                   12.1.0        h15599e2_0            conda-forge
  hpack                      4.1.0         pyhd8ed1ab_0          conda-forge
  htslib                     1.22.1        h566b1c6_0            bioconda   
  hyperframe                 6.1.0         pyhd8ed1ab_0          conda-forge
  icu                        75.1          he02047a_0            conda-forge
  idna                       3.11          pyhd8ed1ab_0          conda-forge
  isa-l                      2.31.1        hb9d3cd8_1            conda-forge
  k8                         1.2           he8db53b_6            bioconda   
  kernel-headers_linux-64    5.14.0        he073ed8_2            conda-forge
  keyutils                   1.6.3         hb9d3cd8_0            conda-forge
  krb5                       1.21.3        h659f571_0            conda-forge
  lame                       3.100         h166bdaf_1003         conda-forge
  lcms2                      2.17          h717163a_0            conda-forge
  ld_impl_linux-64           2.44          h1aa0949_4            conda-forge
  lerc                       4.0.0         h0aef613_1            conda-forge
  libasprintf                0.25.1        h3f43e3d_1            conda-forge
  libasprintf-devel          0.25.1        h3f43e3d_1            conda-forge
  libblas                    3.9.0         38_h4a7cf45_openblas  conda-forge
  libboost                   1.85.0        h0ccab89_4            conda-forge
  libboost-devel             1.85.0        h00ab1b0_4            conda-forge
  libboost-headers           1.85.0        ha770c72_4            conda-forge
  libcap                     2.76          h0b2e76d_0            conda-forge
  libcblas                   3.9.0         38_h0358290_openblas  conda-forge
  libclang-cpp20.1           20.1.8        default_h99862b1_4    conda-forge
  libclang-cpp21.1           21.1.0        default_h99862b1_1    conda-forge
  libclang13                 21.1.0        default_h746c552_1    conda-forge
  libcups                    2.3.3         hb8b1518_5            conda-forge
  libcurl                    8.16.0        h4e3cde8_0            conda-forge
  libdeflate                 1.24          h86f0d12_0            conda-forge
  libdrm                     2.4.125       hb03c661_1            conda-forge
  libedit                    3.1.20250104  pl5321h7949ede_0      conda-forge
  libegl                     1.7.0         ha4b6fd6_2            conda-forge
  libev                      4.33          hd590300_2            conda-forge
  libevent                   2.1.12        hf998b51_1            conda-forge
  libexpat                   2.7.1         hecca717_0            conda-forge
  libffi                     3.5.2         h9ec8514_0            conda-forge
  libflac                    1.4.3         h59595ed_0            conda-forge
  libfreetype                2.14.1        ha770c72_0            conda-forge
  libfreetype6               2.14.1        h73754d4_0            conda-forge
  libgcc                     15.2.0        h767d61c_7            conda-forge
  libgcc-devel_linux-64      15.2.0        h73f6952_107          conda-forge
  libgcc-ng                  15.2.0        h69a702a_7            conda-forge
  libgcrypt-lib              1.11.1        hb9d3cd8_0            conda-forge
  libgd                      2.3.3         h6f5c62b_11           conda-forge
  libgettextpo               0.25.1        h3f43e3d_1            conda-forge
  libgettextpo-devel         0.25.1        h3f43e3d_1            conda-forge
  libgfortran                15.2.0        h69a702a_7            conda-forge
  libgfortran-ng             15.2.0        h69a702a_7            conda-forge
  libgfortran5               15.2.0        hcd61629_7            conda-forge
  libgl                      1.7.0         ha4b6fd6_2            conda-forge
  libglib                    2.86.0        h32235b2_1            conda-forge
  libglvnd                   1.7.0         ha4b6fd6_2            conda-forge
  libglx                     1.7.0         ha4b6fd6_2            conda-forge
  libgomp                    15.2.0        h767d61c_7            conda-forge
  libgpg-error               1.55          h3f2d84a_0            conda-forge
  libiconv                   1.18          h3b78370_2            conda-forge
  libidn2                    2.3.8         hfac485b_1            conda-forge
  libjpeg-turbo              3.1.0         hb9d3cd8_0            conda-forge
  liblapack                  3.9.0         38_h47877c9_openblas  conda-forge
  libllvm20                  20.1.8        hecd9e04_0            conda-forge
  libllvm21                  21.1.0        hecd9e04_0            conda-forge
  liblzma                    5.8.1         hb9d3cd8_2            conda-forge
  liblzma-devel              5.8.1         hb9d3cd8_2            conda-forge
  libnghttp2                 1.67.0        had1ee68_0            conda-forge
  libnsl                     2.0.1         hb9d3cd8_1            conda-forge
  libntlm                    1.8           hb9d3cd8_0            conda-forge
  libogg                     1.3.5         hd0c01bc_1            conda-forge
  libopenblas                0.3.30        pthreads_h94d23a6_3   conda-forge
  libopus                    1.5.2         hd0c01bc_0            conda-forge
  libpciaccess               0.18          hb9d3cd8_0            conda-forge
  libpng                     1.6.50        h421ea60_1            conda-forge
  libpq                      17.6          h3675c94_2            conda-forge
  libsndfile                 1.2.2         hc60ed4a_1            conda-forge
  libsqlite                  3.50.4        h0c1763c_0            conda-forge
  libssh2                    1.11.1        hcf80075_0            conda-forge
  libstdcxx                  15.2.0        h8f9b012_7            conda-forge
  libstdcxx-ng               15.2.0        h4852527_7            conda-forge
  libsystemd0                257.9         h996ca69_0            conda-forge
  libtiff                    4.7.1         h8261f1e_0            conda-forge
  libunistring               0.9.10        h7f98852_0            conda-forge
  libuuid                    2.41.2        he9a06e4_0            conda-forge
  libvorbis                  1.3.7         h54a6638_2            conda-forge
  libwebp-base               1.6.0         hd42ef1d_0            conda-forge
  libxcb                     1.17.0        h8a09558_0            conda-forge
  libxcrypt                  4.4.36        hd590300_1            conda-forge
  libxkbcommon               1.11.0        he8b52b9_0            conda-forge
  libxml2                    2.13.9        h04c0eec_0            conda-forge
  libzlib                    1.3.1         hb9d3cd8_2            conda-forge
  loguru                     0.7.3         pyh707e725_0          conda-forge
  lz4-c                      1.10.0        h5888daf_1            conda-forge
  mash                       2.3           hb105d93_10           bioconda   
  miniasm                    0.3           h577a1d6_5            bioconda   
  minimap2                   2.30          h577a1d6_0            bioconda   
  mmseqs2                    18.8cc5c      hd6d6fdc_0            bioconda   
  mpfr                       4.2.1         h90cbb55_3            conda-forge
  mpg123                     1.32.9        hc50e24c_0            conda-forge
  mpi                        1.0           openmpi               conda-forge
  ncbi-vdb                   3.2.1         h9948957_0            bioconda   
  ncurses                    6.5           h2d0b736_3            conda-forge
  nspr                       4.37          h29cc59b_0            conda-forge
  nss                        3.117         h445c969_0            conda-forge
  numpy                      2.3.4         py312h33ff503_0       conda-forge
  openjdk                    24.0.2        h5755bd7_0            conda-forge
  openldap                   2.6.10        he970967_0            conda-forge
  openmpi                    4.1.6         hc5af2df_101          conda-forge
  openssl                    3.5.4         h26f9b46_0            conda-forge
  packaging                  25.0          pyh29332c3_1          conda-forge
  pandas                     2.3.3         py312hf79963d_1       conda-forge
  pango                      1.56.4        hadf4263_0            conda-forge
  pcre2                      10.46         h1321c63_0            conda-forge
  perl                       5.32.1        7_hd590300_perl5      conda-forge
  perl-archive-tar           3.04          pl5321hdfd78af_0      bioconda   
  perl-carp                  1.50          pl5321hd8ed1ab_0      conda-forge
  perl-common-sense          3.75          pl5321hd8ed1ab_0      conda-forge
  perl-compress-raw-bzip2    2.214         pl5321hda65f42_0      conda-forge
  perl-compress-raw-zlib     2.214         pl5321h4dac143_0      conda-forge
  perl-encode                3.21          pl5321hb9d3cd8_1      conda-forge
  perl-exporter              5.74          pl5321hd8ed1ab_0      conda-forge
  perl-exporter-tiny         1.002002      pl5321hd8ed1ab_0      conda-forge
  perl-extutils-makemaker    7.70          pl5321hd8ed1ab_0      conda-forge
  perl-filesys-df            0.92          pl5321h7b50bb2_9      bioconda   
  perl-io-compress           2.213         pl5321h503566f_0      bioconda   
  perl-io-zlib               1.15          pl5321hdfd78af_1      bioconda   
  perl-json                  4.10          pl5321hdfd78af_1      bioconda   
  perl-json-xs               4.04          pl5321h9948957_0      bioconda   
  perl-list-moreutils        0.430         pl5321hdfd78af_0      bioconda   
  perl-list-moreutils-xs     0.430         pl5321h7b50bb2_5      bioconda   
  perl-parent                0.243         pl5321hd8ed1ab_0      conda-forge
  perl-pathtools             3.75          pl5321hb9d3cd8_2      conda-forge
  perl-scalar-list-utils     1.70          pl5321hb03c661_0      conda-forge
  perl-storable              3.15          pl5321hb9d3cd8_2      conda-forge
  perl-types-serialiser      1.01          pl5321hdfd78af_0      bioconda   
  pip                        25.2          pyh8b19718_0          conda-forge
  pixman                     0.46.4        h54a6638_1            conda-forge
  plassembler                1.8.1         pyhdfd78af_0          bioconda   
  pthread-stubs              0.4           hb9d3cd8_1002         conda-forge
  pulseaudio-client          17.0          h9a8bead_2            conda-forge
  pycparser                  2.22          pyh29332c3_1          conda-forge
  pyrodigal                  3.6.3.post1   py312h0fa9677_1       bioconda   
  pysam                      0.23.3        py312h47d5410_1       bioconda   
  pysocks                    1.7.1         pyha55dd90_7          conda-forge
  python                     3.12.12       hd63d673_1_cpython    conda-forge
  python-dateutil            2.9.0.post0   pyhe01879c_2          conda-forge
  python-tzdata              2025.2        pyhd8ed1ab_0          conda-forge
  python_abi                 3.12          8_cp312               conda-forge
  pytz                       2025.2        pyhd8ed1ab_0          conda-forge
  pyyaml                     6.0.3         py312h8a5da7c_0       conda-forge
  qt-main                    5.15.15       h3a7ef08_5            conda-forge
  racon                      1.5.0         h077b44d_7            bioconda   
  raven-assembler            1.8.3         h5ca1c30_3            bioconda   
  readline                   8.2           h8c095d6_2            conda-forge
  requests                   2.32.5        pyhd8ed1ab_0          conda-forge
  samtools                   1.22.1        h96c455f_0            bioconda   
  setuptools                 80.9.0        pyhff2d567_0          conda-forge
  six                        1.17.0        pyhe01879c_1          conda-forge
  spades                     4.2.0         h8d6e82b_2            bioconda   
  sysroot_linux-64           2.34          h087de78_2            conda-forge
  tk                         8.6.13        noxft_hd72426e_102    conda-forge
  tzdata                     2025b         h78e105d_0            conda-forge
  unicycler                  0.5.1         py312hdcc493e_5       bioconda   
  urllib3                    2.5.0         pyhd8ed1ab_0          conda-forge
  wget                       1.21.4        hda4d442_0            conda-forge
  wheel                      0.45.1        pyhd8ed1ab_1          conda-forge
  xcb-util                   0.4.1         h4f16b4b_2            conda-forge
  xcb-util-image             0.4.0         hb711507_2            conda-forge
  xcb-util-keysyms           0.4.1         hb711507_0            conda-forge
  xcb-util-renderutil        0.3.10        hb711507_0            conda-forge
  xcb-util-wm                0.4.2         hb711507_0            conda-forge
  xkeyboard-config           2.46          hb03c661_0            conda-forge
  xorg-libice                1.1.2         hb9d3cd8_0            conda-forge
  xorg-libsm                 1.2.6         he73a12e_0            conda-forge
  xorg-libx11                1.8.12        h4f16b4b_0            conda-forge
  xorg-libxau                1.0.12        hb9d3cd8_0            conda-forge
  xorg-libxdamage            1.1.6         hb9d3cd8_0            conda-forge
  xorg-libxdmcp              1.1.5         hb9d3cd8_0            conda-forge
  xorg-libxext               1.3.6         hb9d3cd8_0            conda-forge
  xorg-libxfixes             6.0.2         hb03c661_0            conda-forge
  xorg-libxi                 1.8.2         hb9d3cd8_0            conda-forge
  xorg-libxrandr             1.5.4         hb9d3cd8_0            conda-forge
  xorg-libxrender            0.9.12        hb9d3cd8_0            conda-forge
  xorg-libxshmfence          1.3.3         hb9d3cd8_0            conda-forge
  xorg-libxt                 1.3.1         hb9d3cd8_0            conda-forge
  xorg-libxtst               1.2.5         hb9d3cd8_3            conda-forge
  xorg-libxxf86vm            1.1.6         hb9d3cd8_0            conda-forge
  xz                         5.8.1         hbcc6ac9_2            conda-forge
  xz-gpl-tools               5.8.1         hbcc6ac9_2            conda-forge
  xz-tools                   5.8.1         hb9d3cd8_2            conda-forge
  yaml                       0.2.5         h280c20c_3            conda-forge
  zlib                       1.3.1         hb9d3cd8_2            conda-forge
  zstandard                  0.25.0        py312h5253ce2_0       conda-forge
  zstd                       1.5.7         hb8e6e7a_2            conda-forge
```

</details>

Basic information on how to use this tool:
- executable: plassembler
- help: --help
- version: --version
- description: |

> plassembler is a program that is designed for automated & fast assembly of plasmids in bacterial genomes that have been hybrid sequenced with long read & paired-end short read sequencing. It was originally designed for Oxford Nanopore Technologies long reads, but it will also work with Pacbio reads. As of v1.3.0, it also works well for long-read only assembled genomes.

Additional information:

The plsdb database that plassembler uses has been pre-downloaded at /plassembler_db using the following command:
```
plassembler download -d /plassembler_db
```

This image is rebuilt twice a year on January 1 and July 1 to keep the database current. These have the tag {version}-{build date}
  
Full documentation: https://github.com/gbouras13/plassembler

## Example Usage

```bash
plassembler run \
    -l nanopore.fastq.gz \
    -1 illumina_R1.fastq.gz \
    -2 illumina_R2.fastq.gz \
    -d /plassembler_db \
    -o <output_directory> \
    -t <threads> \
    -c <chromosome size>
```
