build-files/plassembler/1.8.5/README.md
# plassembler container

Main tool: [plassembler](https://github.com/gbouras13/plassembler)
  
Code repository: https://github.com/gbouras13/plassembler

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda"

  Name                       Version       Build                   Channel    
────────────────────────────────────────────────────────────────────────────────
  _openmp_mutex              4.5           20_gnu                  conda-forge
  about-time                 4.2.1         pyhd8ed1ab_1            conda-forge
  alive-progress             3.3.0         pyhd8ed1ab_0            conda-forge
  alsa-lib                   1.2.16.1      hb03c661_0              conda-forge
  archspec                   0.2.5         pyhd8ed1ab_0            conda-forge
  backports.zstd             1.6.0         py312h90b7ffd_0         conda-forge
  binutils                   2.45.1        default_h4852527_102    conda-forge
  binutils_impl_linux-64     2.45.1        default_hfdba357_102    conda-forge
  biopython                  1.87          py312h4c3975b_0         conda-forge
  blast                      2.17.0        h66d330f_0              bioconda   
  boost-cpp                  1.85.0        h3c6214e_4              conda-forge
  brotli-python              1.2.0         py312hdb49522_1         conda-forge
  bzip2                      1.0.8         hda65f42_9              conda-forge
  c-ares                     1.34.6        hb03c661_0              conda-forge
  ca-certificates            2026.6.17     hbd8a1cb_0              conda-forge
  cairo                      1.18.4        h3394656_0              conda-forge
  canu                       2.3           h3fb4750_2              bioconda   
  capnproto                  1.0.2         h766bdaa_3              conda-forge
  certifi                    2026.6.17     pyhd8ed1ab_0            conda-forge
  charset-normalizer         3.4.9         pyhd8ed1ab_0            conda-forge
  chopper                    0.13.0        h7f49ad2_0              bioconda   
  clang                      22.1.8        default_cfg_h361ecea_3  conda-forge
  clang-22                   22.1.8        default_h9692865_3      conda-forge
  clang_impl_linux-64        22.1.8        default_h6d37801_3      conda-forge
  click                      8.4.2         pyhc90fa1f_0            conda-forge
  compiler-rt                22.1.8        ha770c72_1              conda-forge
  compiler-rt22              22.1.8        hb700be7_1              conda-forge
  compiler-rt22_linux-64     22.1.8        hffcefe0_1              conda-forge
  compiler-rt_linux-64       22.1.8        ha770c72_1              conda-forge
  curl                       8.18.0        h4e3cde8_0              conda-forge
  cyrus-sasl                 2.1.28        hd9c7081_0              conda-forge
  dbus                       1.16.2        h24cb091_1              conda-forge
  dnaapler                   0.8.1         pyhdfd78af_0            bioconda   
  entrez-direct              24.0          he881be0_0              bioconda   
  fastp                      1.3.6         h43da1c4_0              bioconda   
  flye                       2.9.6         py312h734f728_1         bioconda   
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0              conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0              conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0              conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3              conda-forge
  fontconfig                 2.18.1        h27c8c51_0              conda-forge
  fonts-conda-ecosystem      1             0                       conda-forge
  fonts-conda-forge          1             hc364b38_1              conda-forge
  freetype                   2.14.3        ha770c72_0              conda-forge
  fribidi                    1.0.16        hb03c661_0              conda-forge
  giflib                     5.2.2         hd590300_0              conda-forge
  glib                       2.88.2        hbe0478d_0              conda-forge
  glib-tools                 2.88.2        h8094192_0              conda-forge
  gnuplot                    6.0.4         h0aae9d4_0              conda-forge
  graphemeu                  0.7.2         pyhc364b38_0            conda-forge
  graphite2                  1.3.15        hecca717_0              conda-forge
  gsl                        2.8           hbf7d49c_1              conda-forge
  gst-plugins-base           1.24.11       h651a532_0              conda-forge
  gstreamer                  1.24.11       hc37bda9_0              conda-forge
  h2                         4.3.0         pyhcf101f3_0            conda-forge
  harfbuzz                   12.2.0        h15599e2_0              conda-forge
  hpack                      4.2.0         pyhd8ed1ab_0            conda-forge
  htslib                     1.23          h566b1c6_0              bioconda   
  hyperframe                 6.1.0         pyhd8ed1ab_0            conda-forge
  icu                        75.1          he02047a_0              conda-forge
  idna                       3.18          pyhcf101f3_0            conda-forge
  isa-l                      2.31.1        hb9d3cd8_1              conda-forge
  k8                         1.2           he8db53b_6              bioconda   
  kernel-headers_linux-64    6.12.0        he073ed8_6              conda-forge
  keyutils                   1.6.3         hb9d3cd8_0              conda-forge
  krb5                       1.21.3        h659f571_0              conda-forge
  lame                       3.100         h166bdaf_1003           conda-forge
  lcms2                      2.19.1        h0c24ade_1              conda-forge
  ld_impl_linux-64           2.45.1        default_hbd61a6d_102    conda-forge
  lerc                       4.1.0         hdb68285_0              conda-forge
  libblas                    3.11.0        8_h4a7cf45_openblas     conda-forge
  libboost                   1.85.0        h0ccab89_4              conda-forge
  libboost-devel             1.85.0        h00ab1b0_4              conda-forge
  libboost-headers           1.85.0        ha770c72_4              conda-forge
  libcap                     2.78          hd0affe5_0              conda-forge
  libcblas                   3.11.0        8_h0358290_openblas     conda-forge
  libclang-cpp21.1           21.1.8        default_h99862b1_4      conda-forge
  libclang-cpp22.1           22.1.8        default_h6c227bf_3      conda-forge
  libclang13                 22.1.8        default_h9692865_3      conda-forge
  libcompiler-rt             22.1.8        hb700be7_1              conda-forge
  libcups                    2.3.3         hb8b1518_5              conda-forge
  libcurl                    8.18.0        h4e3cde8_0              conda-forge
  libdeflate                 1.25          h17f619e_0              conda-forge
  libdrm                     2.4.127       hb03c661_0              conda-forge
  libedit                    3.1.20250104  pl5321h7949ede_0        conda-forge
  libegl                     1.7.0         ha4b6fd6_3              conda-forge
  libev                      4.33          hd590300_2              conda-forge
  libevent                   2.1.12        hf998b51_1              conda-forge
  libexpat                   2.8.1         hecca717_1              conda-forge
  libffi                     3.5.2         h3435931_0              conda-forge
  libflac                    1.5.0         he200343_1              conda-forge
  libfreetype                2.14.3        ha770c72_0              conda-forge
  libfreetype6               2.14.3        h73754d4_0              conda-forge
  libgcc                     15.2.0        he0feb66_19             conda-forge
  libgcc-devel_linux-64      15.2.0        hcc6f6b0_119            conda-forge
  libgcc-ng                  15.2.0        h69a702a_19             conda-forge
  libgd                      2.3.3         h6f5c62b_11             conda-forge
  libgfortran                15.2.0        h69a702a_19             conda-forge
  libgfortran-ng             15.2.0        h69a702a_19             conda-forge
  libgfortran5               15.2.0        h68bc16d_19             conda-forge
  libgl                      1.7.0         ha4b6fd6_3              conda-forge
  libglib                    2.88.2        h0d30a3d_0              conda-forge
  libglvnd                   1.7.0         ha4b6fd6_3              conda-forge
  libglx                     1.7.0         ha4b6fd6_3              conda-forge
  libgomp                    15.2.0        he0feb66_19             conda-forge
  libhwy                     1.3.0         h4c17acf_1              conda-forge
  libiconv                   1.18          h3b78370_2              conda-forge
  libidn2                    2.3.8         hfac485b_1              conda-forge
  libjpeg-turbo              3.1.4.1       hb03c661_0              conda-forge
  liblapack                  3.11.0        8_h47877c9_openblas     conda-forge
  libllvm21                  21.1.8        hf7376ad_0              conda-forge
  libllvm22                  22.1.8        hf7376ad_1              conda-forge
  liblzma                    5.8.3         hb03c661_0              conda-forge
  liblzma-devel              5.8.3         hb03c661_0              conda-forge
  libnghttp2                 1.68.1        h877daf1_0              conda-forge
  libnsl                     2.0.1         hb9d3cd8_1              conda-forge
  libntlm                    1.8           hb9d3cd8_0              conda-forge
  libogg                     1.3.5         hd0c01bc_1              conda-forge
  libopenblas                0.3.33        pthreads_h94d23a6_0     conda-forge
  libopus                    1.6.1         h280c20c_0              conda-forge
  libpciaccess               0.19          hb03c661_0              conda-forge
  libpng                     1.6.58        h421ea60_0              conda-forge
  libpq                      18.1          h5c52fec_2              conda-forge
  libsndfile                 1.2.2         hc7d488a_2              conda-forge
  libsqlite                  3.53.3        h0c1763c_0              conda-forge
  libssh2                    1.11.1        hcf80075_0              conda-forge
  libstdcxx                  15.2.0        h934c35e_19             conda-forge
  libstdcxx-ng               15.2.0        hdf11a46_19             conda-forge
  libsystemd0                261.1         h6f4a2f1_0              conda-forge
  libtiff                    4.7.2         h9d88235_0              conda-forge
  libunistring               0.9.10        h7f98852_0              conda-forge
  libuuid                    2.42.2        h5347b49_0              conda-forge
  libvorbis                  1.3.7         h54a6638_2              conda-forge
  libwebp-base               1.6.0         hd42ef1d_0              conda-forge
  libxcb                     1.17.0        h8a09558_0              conda-forge
  libxcrypt                  4.4.36        hd590300_1              conda-forge
  libxkbcommon               1.13.2        hca5e8e5_0              conda-forge
  libxml2                    2.15.1        h26afc86_0              conda-forge
  libxml2-16                 2.15.1        ha9997c6_0              conda-forge
  libzlib                    1.3.2         h25fd6f3_2              conda-forge
  llvm-openmp                22.1.8        h4922eb0_0              conda-forge
  loguru                     0.7.3         pyh707e725_0            conda-forge
  mash                       2.3           hb105d93_10             bioconda   
  miniasm                    0.3           h577a1d6_5              bioconda   
  minimap2                   2.31          h118bc1c_0              bioconda   
  mpg123                     1.32.9        hc50e24c_0              conda-forge
  mpi                        1.0           openmpi                 conda-forge
  ncbi-vdb                   3.4.1         hd63eeec_0              bioconda   
  ncurses                    6.6           hdb14827_0              conda-forge
  nspr                       4.38          h29cc59b_0              conda-forge
  nss                        3.118         h445c969_0              conda-forge
  numpy                      2.5.1         py312h33ff503_0         conda-forge
  openjdk                    25.0.1        h5755bd7_0              conda-forge
  openldap                   2.6.10        he970967_0              conda-forge
  openmpi                    4.1.6         hc5af2df_101            conda-forge
  openssl                    3.6.3         h35e630c_0              conda-forge
  packaging                  26.2          pyhc364b38_0            conda-forge
  pandas                     3.0.3         py312h8ecdadd_0         conda-forge
  pango                      1.56.4        hadf4263_0              conda-forge
  pcre2                      10.47         haa7fec5_0              conda-forge
  perl                       5.32.1        7_hd590300_perl5        conda-forge
  perl-archive-tar           3.12          pl5321hdfd78af_0        bioconda   
  perl-carp                  1.50          pl5321hd8ed1ab_0        conda-forge
  perl-common-sense          3.75          pl5321hd8ed1ab_0        conda-forge
  perl-compress-raw-bzip2    2.214         pl5321hda65f42_0        conda-forge
  perl-compress-raw-zlib     2.214         pl5321h4dac143_0        conda-forge
  perl-encode                3.24          pl5321hb03c661_0        conda-forge
  perl-exporter              5.74          pl5321hd8ed1ab_0        conda-forge
  perl-exporter-tiny         1.002002      pl5321hd8ed1ab_0        conda-forge
  perl-extutils-makemaker    7.70          pl5321hd8ed1ab_0        conda-forge
  perl-filesys-df            0.92          pl5321h7b50bb2_9        bioconda   
  perl-io-compress           2.216         pl5321h503566f_0        bioconda   
  perl-io-zlib               1.15          pl5321hdfd78af_1        bioconda   
  perl-json                  4.11          pl5321hdfd78af_0        bioconda   
  perl-json-xs               4.04          pl5321h9948957_0        bioconda   
  perl-list-moreutils        0.430         pl5321hdfd78af_0        bioconda   
  perl-list-moreutils-xs     0.430         pl5321h7b50bb2_5        bioconda   
  perl-parent                0.243         pl5321hd8ed1ab_0        conda-forge
  perl-pathtools             3.75          pl5321hb9d3cd8_2        conda-forge
  perl-scalar-list-utils     1.70          pl5321hb03c661_0        conda-forge
  perl-storable              3.15          pl5321hb9d3cd8_2        conda-forge
  perl-types-serialiser      1.01          pl5321hdfd78af_0        bioconda   
  pip                        26.1.2        pyh8b19718_0            conda-forge
  pixman                     0.46.4        h54a6638_1              conda-forge
  plassembler                1.8.3         pyhdfd78af_0            bioconda   
  pthread-stubs              0.4           hb9d3cd8_1002           conda-forge
  pulseaudio-client          17.0          h9a6aba3_3              conda-forge
  pyrodigal                  3.7.1         py312h247cb63_1         bioconda   
  pysam                      0.23.3        py312h8f9e533_2         bioconda   
  pysocks                    1.7.1         pyha55dd90_7            conda-forge
  python                     3.12.13       hd63d673_0_cpython      conda-forge
  python-dateutil            2.9.0.post0   pyhe01879c_2            conda-forge
  python_abi                 3.12          8_cp312                 conda-forge
  pyyaml                     6.0.3         py312h8a5da7c_1         conda-forge
  qt-main                    5.15.15       h3c3fd16_6              conda-forge
  racon                      1.5.0         h077b44d_8              bioconda   
  raven-assembler            1.8.3         h5ca1c30_3              bioconda   
  readline                   8.3           h853b02a_0              conda-forge
  requests                   2.34.2        pyhcf101f3_0            conda-forge
  samtools                   1.23          h96c455f_0              bioconda   
  setuptools                 83.0.0        pyh332efcf_0            conda-forge
  six                        1.17.0        pyhe01879c_1            conda-forge
  spades                     4.3.0         hde4eca7_0              bioconda   
  sysroot_linux-64           2.39          hc4b9eeb_6              conda-forge
  tk                         8.6.13        noxft_h366c992_103      conda-forge
  tzdata                     2025c         hc9c84f9_1              conda-forge
  unicycler                  0.5.1         py312hdcc493e_5         bioconda   
  urllib3                    2.7.0         pyhd8ed1ab_0            conda-forge
  wget                       1.25.0        h653f8fd_1              conda-forge
  wheel                      0.47.0        pyhd8ed1ab_0            conda-forge
  xcb-util                   0.4.1         h4f16b4b_2              conda-forge
  xcb-util-image             0.4.0         hb711507_2              conda-forge
  xcb-util-keysyms           0.4.1         hb711507_0              conda-forge
  xcb-util-renderutil        0.3.10        hb711507_0              conda-forge
  xcb-util-wm                0.4.2         hb711507_0              conda-forge
  xkeyboard-config           2.48          h280c20c_0              conda-forge
  xorg-libice                1.1.2         hb9d3cd8_0              conda-forge
  xorg-libsm                 1.2.6         he73a12e_0              conda-forge
  xorg-libx11                1.8.13        he1eb515_0              conda-forge
  xorg-libxau                1.0.12        hb03c661_1              conda-forge
  xorg-libxdamage            1.1.6         hb9d3cd8_0              conda-forge
  xorg-libxdmcp              1.1.5         hb03c661_1              conda-forge
  xorg-libxext               1.3.7         hb03c661_0              conda-forge
  xorg-libxfixes             6.0.2         hb03c661_0              conda-forge
  xorg-libxi                 1.8.3         hb03c661_0              conda-forge
  xorg-libxrandr             1.5.5         hb03c661_0              conda-forge
  xorg-libxrender            0.9.12        hb9d3cd8_0              conda-forge
  xorg-libxshmfence          1.3.3         hb9d3cd8_0              conda-forge
  xorg-libxt                 1.3.1         hb9d3cd8_0              conda-forge
  xorg-libxtst               1.2.5         hb9d3cd8_3              conda-forge
  xorg-libxxf86vm            1.1.7         hb03c661_0              conda-forge
  xz                         5.8.3         ha02ee65_0              conda-forge
  xz-gpl-tools               5.8.3         ha02ee65_0              conda-forge
  xz-tools                   5.8.3         hb03c661_0              conda-forge
  yaml                       0.2.5         h280c20c_3              conda-forge
  zlib                       1.3.2         h25fd6f3_2              conda-forge
  zstd                       1.5.7         hb78ec9c_6              conda-forge
```

</details>

Basic information on how to use this tool:
- executable: plassembler
- help: --help
- version: --version
- description: |

> plassembler is a program that is designed for automated & fast assembly of plasmids in bacterial genomes that have been hybrid sequenced with long read & paired-end short read sequencing. It was originally designed for Oxford Nanopore Technologies long reads, but it will also work with Pacbio reads. As of v1.3.0, it also works well for long-read only assembled genomes.

Additional information:

The plsdb database that plassembler uses has been pre-downloaded at /plassembler_db using the following command:
```
plassembler download -d /plassembler_db
```

This image is rebuilt twice a year on January 1 and July 1 to keep the database current. These have the tag {version}-{build date}
  
Full documentation: https://github.com/gbouras13/plassembler

## Example Usage

```bash
plassembler run \
    -l nanopore.fastq.gz \
    -1 illumina_R1.fastq.gz \
    -2 illumina_R2.fastq.gz \
    -d /plassembler_db \
    -o <output_directory> \
    -t <threads> \
    -c <chromosome size>
```
